Personal Website Created[not resposive]

--- a/style.css
+++ b/style.css
@@ -1,23 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Poppins:wght@400;500&family=Varela+Round&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 *{
-    font-family: 'Comfortaa', sans-serif;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
+    
+    box-sizing: border-box;
     margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+}
+:root{
     --main-color:#B91E04;
     --text-color:#fff;
 }
 body{
+    font-family: 'Comfortaa', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
     max-width: 90%;
     margin: auto;
     background-color:black;
 }
 .navbar{
+    width: 90%;
+    margin: auto;
     display:flex;
     justify-content:space-between;
-    height:100px;
+    height: 9vh;
     align-items: center;
+    position: fixed;
+    z-index: 1;
+    background-color:black;
+    transition: top 0.3s;
 }
 .navbar_left {
     padding-left:10px;
@@ -34,44 +46,43 @@ body{
 }
 .navbar_right .navbar_items ul{ 
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 .navbar_right .navbar_items ul li {
     list-style-type: none;
-    display: inline-block;
-    padding-right:40px;
+    padding: 0 20px;
 }
 .navbar_right .navbar_items ul li a{
     text-decoration: none;
     color:var(--main-color);
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 650;
 }
 .navbar_right .navbar_items ul li a:hover {
     color:var(--text-color);
 }
-.navbar_right .navbar_items ul li a.active{
+.navbar_right .navbar_items ul li a.active {
     color:var(--text-color);
 }
 .page{
     margin: auto;
+    padding-top: 4vh;
 }
 .page_1{
-    width: 100%;
-    height: 45em;
+    padding-top:2vh;
+     ;
+    height: 92vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
 }
 .page_1 h1{
-    padding-top:2.5em;
     font-size: 90px;
     text-transform: uppercase;
     font-family: 'Bebas Neue', cursive;
     color:var(--main-color);
-    
-}
-.page_1 h1 span{
-
-    color:lightcoral;
-    font-family: 'Bebas Neue', cursive;
 }
 .page_2{
     width:60%;
@@ -96,7 +107,6 @@ body{
 }
 .page_3 h1,.page_4 h1{
     color:var(--text-color);
-    
     text-transform: uppercase;
     margin-bottom: 2em;
     box-sizing: border-box;
@@ -112,16 +122,12 @@ body{
     height: max-content;
     display: flex;
     flex-direction: column;
-    margin-bottom: 2.5em;
-    align-items: center;
+    justify-content: center;
     gap:2em;
 }
 .img{
-    width: 65%;
-}
-.work_2 .img
-{
-    padding-left: 30%;
+    width: 80%;
+    margin: auto;
 }
 .img img {
     width: 100%;
@@ -130,3 +136,24 @@ body{
     border-radius: 20px;
 }
 
+.contact_content {
+    align-self: center;
+    justify-self: center;
+}
+.contact_content p{
+    text-align: center;
+    color:var(--text-color);
+    font-size: 20px;
+    margin-bottom: 3vh;
+}
+.contact_social
+{
+    display: flex;
+    justify-content: center;
+    gap:4vh;
+    padding-bottom: 10vh;
+}
+.contact_social a {
+    color: var(--main-color);
+    font-size: 3.5vh;
+}
