--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body{
     max-width: 90%;
     margin: auto;
     background-color:black;
+    user-select: none;
+    scroll-padding-top: 100px;
 }
 .navbar{
     width: 90%;
@@ -51,7 +53,7 @@ body{
 }
 .navbar_right .navbar_items ul li {
     list-style-type: none;
-    padding: 0 20px;
+    padding: 0 .8rem;
 }
 .navbar_right .navbar_items ul li a{
     text-decoration: none;
@@ -71,7 +73,6 @@ body{
 }
 .page_1{
     padding-top:2vh;
-     ;
     height: 92vh;
     display: flex;
     flex-direction: column;
@@ -79,6 +80,7 @@ body{
     text-align: center;
 }
 .page_1 h1{
+    user-select: none;
     font-size: 90px;
     text-transform: uppercase;
     font-family: 'Bebas Neue', cursive;
@@ -151,9 +153,87 @@ body{
     display: flex;
     justify-content: center;
     gap:4vh;
-    padding-bottom: 10vh;
+    padding-bottom: 7%;
 }
 .contact_social a {
     color: var(--main-color);
-    font-size: 3.5vh;
+    font-size: 1.5rem;
+}
+
+@media screen and (max-width: 900px) {
+    .navbar {
+        height: 8%;
+        display: flex;
+        justify-content:flex-start;
+        margin: auto;
+        align-items: center;
+    }
+    .navbar_left{
+        width: 90%;
+        align-items: center;
+    }
+    .navbar_right{
+        width:90%;
+        display: flex;
+        align-items: center;
+        justify-content:end; 
+    }
+    .navbar_left .logo{
+        font-size: 1rem;
+        margin-right: 4em;
+        align-items: center;
+        justify-content: center;
+        
+     }
+     .navbar_left .logo span {
+        padding-top:.6rem;
+        align-items: center;
+        font-size: 2rem;
+     }
+    .navbar_right {
+        font-size: 0.8rem;
+        padding-left: 15px;
+    }
+    .navbar_right .navbar_items ul li {
+        padding-right:5%;
+    }
+    .page_2 {
+        width: 100%;
+        height: 30rem;
+        text-align:center;
+    }
+    .page_2 p {
+        text-align:justify;
+    }
+    .page_3 {
+        height:40%;
+    }
+    .page_3 .works {
+        display:flex;
+        flex-direction: column;
+        padding-top:25%;
+    }
+    .page_3 h1,.page_4 h1 {
+        font-size: 1.5rem;
+        color:var(--text-color);
+        text-transform: uppercase;
+        box-sizing: border-box;
+        box-shadow: 0px 1.5px 0px 0px rgba(185,30,4,0.5);
+        
+    }
+    .page_4 .contact_content {
+        width: 100%;
+        display: flex;
+        flex-direction:column;
+    }
+    .page_4 .contact_content p {
+
+        font-size: medium;
+    }
+    .page_4 .contact_social {
+        padding-bottom: 5%;
+    }
+    .page_4 .contact_social a {
+        font-size: 1.4rem;
+    }
 }
